--- a/Views/FullScreenPage.xaml
+++ b/Views/FullScreenPage.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:vlc="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Melista.Views"
       xmlns:viewmodels="clr-namespace:Melista.ViewModels" xmlns:local1="clr-namespace:Melista" 
@@ -18,109 +19,116 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <Border x:Name="MediaEl" ClipToBounds="True" CornerRadius="20">
-                <Grid ClipToBounds="True">
-                    <ContentControl x:Name="Video" Content="{Binding Player, Mode=TwoWay}" >
+                <Grid>
+                    <vlc:VideoView x:Name="Video" MediaPlayer="{Binding Player}" Loaded="Video_Loaded">
+                        <Grid>
+                            <Grid Visibility="Visible">
+
+                                <Border VerticalAlignment="Bottom" Height="{Binding Path=ActualHeight, ElementName=VideoPanel}" CornerRadius="20">
+                                    <controls:BlurryUserControl
+                                    Background="Transparent"
+                                    BlurContainer="{Binding ElementName=Video}"
+                                    BlurRadius="45"
+                                    Magnification="0.25">
+                                        <controls:BlurryUserControl.Clip>
+                                            <RectangleGeometry RadiusX="20" RadiusY="20" 
+                                                           Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource BlurPanelConverter}}"></RectangleGeometry>
+                                        </controls:BlurryUserControl.Clip>
+                                    </controls:BlurryUserControl>
+                                </Border>
+
+                                <Border HorizontalAlignment="Center" Height="75" Width="75">
+                                    <controls:BlurryUserControl
+                                    Background="Transparent"
+                                    BlurContainer="{Binding ElementName=Video}"
+                                    BlurRadius="45"
+                                    Magnification="0.25">
+                                        <controls:BlurryUserControl.Clip>
+                                            <RectangleGeometry RadiusX="100" RadiusY="100" 
+                                                           Rect="0 0 75 75"></RectangleGeometry>
+                                        </controls:BlurryUserControl.Clip>
+                                    </controls:BlurryUserControl>
+                                </Border>
+
+                                <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
+                                    <Button.Background>
+                                        <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
+                                    </Button.Background>
+                                </Button>
+                                <Grid x:Name="VideoPanel" VerticalAlignment="Bottom" Margin="20 0 20 0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+
+                                    <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="0 20 0 20" Width="185">
+                                        <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding Rewind}">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="/Resources/Icons/previous.png"/>
+                                            </Button.Background>
+                                        </Button>
+                                        <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding PlayVideoCommand}">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
+                                            </Button.Background>
+                                        </Button>
+                                        <Button Height="25" Width="25" Command="{Binding FastForward}">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="/Resources/Icons/next.png"/>
+                                            </Button.Background>
+                                        </Button>
+                                        <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}" Width="50"></TextBlock>
+                                    </StackPanel>
+
+
+
+                                    <Slider Maximum="{Binding Duration}"
+                                            Style="{DynamicResource Slider_CustomStyle}"
+                                            Value="{Binding Position}"
+                                            Height="20" Grid.Column="1"
+                                            Margin="10 20 0 20"
+                                            Thumb.DragStarted="Slider_DragStarted"
+                                            Thumb.DragCompleted="Slider_DragCompleted">
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="ValueChanged">
+                                                <i:InvokeCommandAction Command="{Binding SliderValueChangedCommand}"/>
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
+                                    </Slider>
+
+                                    <StackPanel Orientation="Horizontal" Grid.Column="2" Margin="0 20 0 20" Width="185">
+                                        <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText2}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}" Width="50"></TextBlock>
+                                        <Button Height="25" Width="25" Margin="0 0 20 0">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="/Resources/Icons/setting.png"/>
+                                            </Button.Background>
+                                        </Button>
+                                        <Button Height="25" Width="25" Margin="0 0 20 0">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="/Resources/Icons/volume.png"/>
+                                            </Button.Background>
+                                        </Button>
+                                        <Button Height="25" Width="25" Command="{Binding MiniScreenCommand}">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="/Resources/Icons/size.png"/>
+                                            </Button.Background>
+                                        </Button>
+                                    </StackPanel>
+                                </Grid>
+                            </Grid>
+                        </Grid>
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="MouseMove">
                                 <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
-                    </ContentControl>
 
-                    <Grid Visibility="{Binding InterfaceVisible}">
-                        <Border VerticalAlignment="Bottom" Height="{Binding Path=ActualHeight, ElementName=VideoPanel}">
-                            <controls:BlurryUserControl
-                                    Background="Transparent"
-                                    BlurContainer="{Binding ElementName=Video}"
-                                    BlurRadius="45"
-                                    Magnification="0.25">
-                            </controls:BlurryUserControl>
-                        </Border>
-                        <Grid VerticalAlignment="Bottom">
-                            <Grid x:Name="VideoPanel" VerticalAlignment="Center" Margin="20 0 20 0">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                    <ColumnDefinition Width="*"></ColumnDefinition>
-                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
-
-                                <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="0 20 0 20">
-                                    <Button Height="35" Width="35" Margin="0 0 20 0" Command="{Binding Rewind}">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Icons/previous.png"/>
-                                        </Button.Background>
-                                    </Button>
-                                    <Button Height="35" Width="35" Margin="0 0 20 0" Command="{Binding PlayVideoCommand}">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Icons/play.png"/>
-                                        </Button.Background>
-                                    </Button>
-                                    <Button Height="35" Width="35" Command="{Binding FastForward}">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Icons/next.png"/>
-                                        </Button.Background>
-                                    </Button>
-                                    <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}"></TextBlock>
-                                </StackPanel>
-
-
-
-                                <Slider Maximum="{Binding Duration}"
-                                            Style="{DynamicResource Slider_CustomStyle}"
-                                            Value="{Binding Position}"
-                                            Height="20" Grid.Column="1"
-                                            Margin="10 20 0 20" Thumb.DragStarted="Slider_DragStarted"
-                                            Thumb.DragCompleted="Slider_DragCompleted">
-                                    
-                                    <i:Interaction.Triggers>
-                                        <i:EventTrigger EventName="ValueChanged">
-                                            <i:InvokeCommandAction Command="{Binding SliderValueChangedCommand}"/>
-                                        </i:EventTrigger>
-                                    </i:Interaction.Triggers>
-                                </Slider>
-
-                                <StackPanel Orientation="Horizontal" Grid.Column="2" Margin="0 20 0 20">
-                                    <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText2}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}"></TextBlock>
-                                    <Button Height="35" Width="35" Margin="0 0 20 0">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Icons/setting.png"/>
-                                        </Button.Background>
-                                    </Button>
-                                    <Button Height="35" Width="35" Margin="0 0 20 0">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Icons/volume.png"/>
-                                        </Button.Background>
-                                    </Button>
-                                    <Button Height="35" Width="35" Command="{Binding MiniScreenCommand}">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Dark/MiniScreen.png"/>
-                                        </Button.Background>
-                                    </Button>
-                                </StackPanel>
-                            </Grid>
-                        </Grid>
-                        
-
-                        <Border HorizontalAlignment="Center" Height="100" Width="100">
-                            <controls:BlurryUserControl
-                                    Background="Transparent"
-                                    BlurContainer="{Binding ElementName=Video}"
-                                    BlurRadius="45"
-                                    Magnification="0.25">
-                                <controls:BlurryUserControl.Clip>
-                                    <RectangleGeometry RadiusX="100" RadiusY="100" 
-                                                           Rect="0 0 100 100"></RectangleGeometry>
-                                </controls:BlurryUserControl.Clip>
-                            </controls:BlurryUserControl>
-                        </Border>
-
-                        <Button Height="35" Width="35" Command="{Binding PlayVideoCommand}">
-                            <Button.Background>
-                                <ImageBrush ImageSource="/Resources/Icons/pause.png"/>
-                            </Button.Background>
-                        </Button>
-                        
-                    </Grid>
+                        <ContentControl.Clip>
+                            <RectangleGeometry RadiusX="20" RadiusY="20" 
+                                                           Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource ContentControlConverter}}"></RectangleGeometry>
+                        </ContentControl.Clip>
+                    </vlc:VideoView>
                 </Grid>
             </Border>
         </Grid>
