--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -36,7 +36,115 @@
                     <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" Background="Black"
                             Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
                             Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
-                        <local:VideoControl></local:VideoControl>
+                        <Grid>
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="MouseMove">
+                                    <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                            <vlc:VideoView x:Name="Video" MediaPlayer="{Binding Player}" Loaded="Video_Loaded">
+                                <Grid>
+                                    <Grid Visibility="Visible">
+
+                                        <Border VerticalAlignment="Bottom" Height="{Binding Path=ActualHeight, ElementName=VideoPanel}" CornerRadius="20">
+                                            <controls:BlurryUserControl
+                                    Background="Transparent"
+                                    BlurContainer="{Binding ElementName=Video}"
+                                    BlurRadius="45"
+                                    Magnification="0.25">
+                                                <controls:BlurryUserControl.Clip>
+                                                    <RectangleGeometry RadiusX="20" RadiusY="20" 
+                                                           Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource BlurPanelConverter}}"></RectangleGeometry>
+                                                </controls:BlurryUserControl.Clip>
+                                            </controls:BlurryUserControl>
+                                        </Border>
+
+                                        <Border HorizontalAlignment="Center" Height="75" Width="75">
+                                            <controls:BlurryUserControl
+                                    Background="Transparent"
+                                    BlurContainer="{Binding ElementName=Video}"
+                                    BlurRadius="45"
+                                    Magnification="0.25">
+                                                <controls:BlurryUserControl.Clip>
+                                                    <RectangleGeometry RadiusX="100" RadiusY="100" 
+                                                           Rect="0 0 75 75"></RectangleGeometry>
+                                                </controls:BlurryUserControl.Clip>
+                                            </controls:BlurryUserControl>
+                                        </Border>
+
+                                        <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
+                                            <Button.Background>
+                                                <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
+                                            </Button.Background>
+                                        </Button>
+                                        <Grid x:Name="VideoPanel" VerticalAlignment="Bottom" Margin="20 0 20 0">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="auto"></ColumnDefinition>
+                                                <ColumnDefinition Width="*"></ColumnDefinition>
+                                                <ColumnDefinition Width="auto"></ColumnDefinition>
+                                            </Grid.ColumnDefinitions>
+
+                                            <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="0 20 0 20" Width="185">
+                                                <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding Rewind}">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="/Resources/Icons/previous.png"/>
+                                                    </Button.Background>
+                                                </Button>
+                                                <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding PlayVideoCommand}">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
+                                                    </Button.Background>
+                                                </Button>
+                                                <Button Height="25" Width="25" Command="{Binding FastForward}">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="/Resources/Icons/next.png"/>
+                                                    </Button.Background>
+                                                </Button>
+                                                <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}" Width="50"></TextBlock>
+                                            </StackPanel>
+
+
+
+                                            <Slider Maximum="{Binding Duration}"
+                                            Style="{DynamicResource Slider_CustomStyle}"
+                                            Value="{Binding Position}"
+                                            Height="20" Grid.Column="1"
+                                            Margin="10 20 0 20"
+                                            Thumb.DragStarted="Slider_DragStarted"
+                                            Thumb.DragCompleted="Slider_DragCompleted">
+                                                <i:Interaction.Triggers>
+                                                    <i:EventTrigger EventName="ValueChanged">
+                                                        <i:InvokeCommandAction Command="{Binding SliderValueChangedCommand}"/>
+                                                    </i:EventTrigger>
+                                                </i:Interaction.Triggers>
+                                            </Slider>
+
+                                            <StackPanel Orientation="Horizontal" Grid.Column="2" Margin="0 20 0 20" Width="185">
+                                                <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText2}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}" Width="50"></TextBlock>
+                                                <Button Height="25" Width="25" Margin="0 0 20 0">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="/Resources/Icons/setting.png"/>
+                                                    </Button.Background>
+                                                </Button>
+                                                <Button Height="25" Width="25" Margin="0 0 20 0">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="/Resources/Icons/volume.png"/>
+                                                    </Button.Background>
+                                                </Button>
+                                                <Button Height="25" Width="25" Command="{Binding FullScreen}">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="/Resources/Icons/size.png"/>
+                                                    </Button.Background>
+                                                </Button>
+                                            </StackPanel>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+                               
+
+                                
+                            </vlc:VideoView>
+                        </Grid>
                     </Border>
                 </Grid>
 
