--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -121,7 +121,7 @@
 
                                             <StackPanel Orientation="Horizontal" Grid.Column="2" Margin="0 20 0 20" Width="185">
                                                 <TextBlock Margin="10 0" VerticalAlignment="Center" Text="{Binding DurText2}" FontWeight="Bold" FontFamily="{StaticResource Font}" Foreground="{DynamicResource PrimaryForegroundBrush}" Width="50"></TextBlock>
-                                                <Button Height="25" Width="25" Margin="0 0 20 0">
+                                                <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding ChangedRate}">
                                                     <Button.Background>
                                                         <ImageBrush ImageSource="/Resources/Icons/setting.png"/>
                                                     </Button.Background>
